# test1

middleware/: build.mk  format_code.sh
middleware/private/: .gitignore  Makefile
middleware/private/alsa_extplug/: Makefile
middleware/private/asr_client/: Makefile
middleware/private/asr_client/libs/esp_v14/: CMakeLists.txt  LICENSE.TXT  README  main.cpp
middleware/private/asr_client/libs/esp_v14/DA_Metrics/: FrameEnergyComputing.cpp
middleware/private/asr_client/libs/esp_v14/VAD_Features/: VAD_class.cpp  VAD_class.h  flagbuffer.cpp  minpeakclass.cpp  minpeakclass.h  xcorr_class.cpp
middleware/private/asr_client/libs/esp_v14/common/: Radix4fft.c  Radix4fft.h  fixed_pt.cpp
middleware/private/bluetooth_sdk_customer/: Makefile  change_log.txt
middleware/private/lavcresample/: Makefile  af_lavcresample.c  af_lavcresample.h  common.h  linkplay_resample_interface.h  mathematics.c  mathematics.h  rational.c  rational.h  resample.c  resample2.c
middleware/private/libbsa/: Makefile
middleware/private/mfi_airplay/: Makefile  WAC_POSIX_Server  mDNSResponder
middleware/private/mplayer/: .gitignore  Makefile  mplayer
middleware/private/shairport/: Makefile  shairport
middleware/utilib/: .gitignore  Makefile
middleware/utilib/libbin/: AMLogic_VUI_Solution_Model.h  BelkinLinkplay_VUI_HFP_v1p0_ControlInterface_AWE6.h  DSPKeyWordDetector.h  DraExport.h  Errors.h  Makefile  Recognizer.h  RecognizerTypes.h  TXAIAudioIO.h  TXAIAudioPlayer.h  TXAudioVideo.h  TXCAudio.h  TXCAudioResource.h  TXCAudioType.h  TXDataPoint.h  TXDeviceSDK.h  TXFileTransfer.h  TXOTA.h  (+32 more)
(+1685 files in other folders)
